syntax = "proto3" ;
package config ;

option go_package = "github.com/Reputation-based-state-machine-replication-/config" ;

import "cryptoconf.proto" ;
import "config/protocol.proto" ;
import "network.proto" ;

// All configuration aggregated here
message NodeDataConfig {
	// Protocol specific configuration
	SyncHSConfig ProtConfig = 1 ;
	// Network configuration for nodes
	NetConfig NetConfig = 2 ;
	// Network configuration for clients
	string ClientPort = 3 ;
	// Cryptographic configuration
	CryptoConfig CryptoCon = 4 ;
}